# TheRustulator

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.rs  cookies.rs  download.rs  login.rs  main.rs  run.rs
