[package]
name = "thrl"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking", "cookies"] }
reqwest_cookie_store = "0.8.0"
scraper = "0.20.0"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
